@@ -5,46 +5,42 @@ import com.mergeteam.coincontrol.dto.ReadUserDto;
 import com.mergeteam.coincontrol.dto.UpdateUserDto;
 import com.mergeteam.coincontrol.dto.WalletDto;
 import com.mergeteam.coincontrol.entity.User;
+import com.mergeteam.coincontrol.mapper.CreateUserDtoMapper;
+import com.mergeteam.coincontrol.mapper.ReadUserDtoMapper;
 import com.mergeteam.coincontrol.repository.UserRepository;
+import com.mergeteam.coincontrol.util.UserNotFoundException;
 import lombok.RequiredArgsConstructor;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageImpl;
 import org.springframework.data.domain.Pageable;
+import org.springframework.security.core.userdetails.UserDetails;
+import org.springframework.security.core.userdetails.UserDetailsService;
+import org.springframework.security.core.userdetails.UsernameNotFoundException;
 import org.springframework.stereotype.Service;
 
+import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
-public class UserService {
+public class UserService implements UserDetailsService {
 
+    CreateUserDtoMapper createUserDtoMapper = CreateUserDtoMapper.INSTANCE;
+    ReadUserDtoMapper readUserDtoMapper = ReadUserDtoMapper.INSTANCE;
     private UserRepository userRepository;
 
-
-//    public Slice<User> findAll(Pageable page) {
-//       return userRepository.findAll(page);
-//    }
+    public ReadUserDto findById(UUID id) {
+        Optional<User> optionalUser = userRepository.findById(id);
+        return optionalUser.map(readUserDtoMapper::entityToDto)
+                .orElseThrow(UserNotFoundException::new);
+    }
 
     public ReadUserDto save(CreateUserDto createUserDto) {
-        User user = User.builder()
-                .password(createUserDto.getPassword())
-                .email(createUserDto.getEmail())
-                .name(createUserDto.getName())
-                .avatarPath(createUserDto.getAvatarPath())
-                .role(createUserDto.getRole())
-                .build();
+        User user = createUserDtoMapper.dtoToEntity(createUserDto);
         User savedUser = userRepository.save(user);
-        ReadUserDto readUserDto = ReadUserDto.builder()
-                .id(savedUser.getId())
-                .name(savedUser.getName())
-                .avatarPath(savedUser.getAvatarPath())
-                .email(savedUser.getEmail())
-                .role(savedUser.getRole())
-                .build();
-        return readUserDto;
+        return readUserDtoMapper.entityToDto(savedUser);
     }
 
     public void deleteById(UUID id) {
@@ -53,7 +49,7 @@ public class UserService {
 
     public Page<WalletDto> getWalletsForUser(UUID id, Pageable pageable) {
         User user = userRepository.findById(id)
-                .orElseThrow();
+                .orElseThrow(UserNotFoundException::new);
         List<WalletDto> walletDtos = user.getWallets()
                 .stream()
                 .map(wallet -> WalletDto.builder()
@@ -61,7 +57,7 @@ public class UserService {
                         .name(wallet.getName())
                         .balance(wallet.getBalance())
                         .build())
-                .collect(Collectors.toList());
+                .toList();
         long offset = pageable.getOffset();
         long size = Math.min(pageable.getOffset() + pageable.getPageSize(), walletDtos.size());
         List<WalletDto> sublist = walletDtos.subList((int) offset, (int) size);
@@ -84,18 +80,19 @@ public class UserService {
                     .name(savedUser.getName())
                     .build();
         } else {
-            throw new RuntimeException();   // TODO: add advicer to handle runtimeexcep
+            throw new UserNotFoundException();
         }
     }
 
-//    @Override
-//    public UserDetails loadUserByUsername(String username) throws UsernameNotFoundException {
-//        return userRepository.findByEmail(username)
-//                .map(user -> new org.springframework.security.core.userdetails.User(
-//                        user.getEmail(),
-//                        user.getPassword(),
-//                        Collections.singleton(user.getRole())
-//                ))
-//                .orElseThrow(() -> new UsernameNotFoundException("Failed to retrieve user: " + username));
-//    }
+    @Override
+    public UserDetails loadUserByUsername(String username) throws UsernameNotFoundException {
+        return userRepository.findByEmail(username)
+                .map(user -> new org.springframework.security.core.userdetails.User(
+                        user.getEmail(),
+                        user.getPassword(),
+                        Collections.singleton(user.getRole())
+                ))
+                .orElseThrow(() -> new UsernameNotFoundException("Failed to retrieve user: " + username));
+    }
+
 }
